# qfenix

./: Makefile  README.md  at_port.c  at_port.h  atcmd.c  atcmd.h  atconsole.c  diag.c  diag_switch.c  pcie.c  pdu.c  pdu.h  qcseriald.c  qcseriald.h  qdl.c  qdl.h  ucs2_utf8.c  usb.c  usb_ids.h
.github/workflows/: static-release.yml
gui/: CMakeLists.txt
gui/resources/: qfenix.icns
gui/src/: macos_icon.mm  main.cpp
